BJS2-96082 refactor code