@@ -5,8 +5,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import school.faang.user_service.config.context.UserContext;
 import school.faang.user_service.dto.user.CreateUserDto;
@@ -25,22 +25,12 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 @Slf4j
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
-
-    private static final Map<String, Function<UserDto, String>> FIELD_EXTRACTORS = Map.of(
-            "id", userDto -> String.valueOf(userDto.id()),
-            "username", UserDto::username,
-            "email", UserDto::email,
-            "phone", UserDto::phone,
-            "aboutMe", UserDto::aboutMe
-    );
 
 
     @Value("${user.password.min.length}")
@@ -85,30 +75,36 @@ public class UserServiceImpl implements UserService {
         return userMapper.toUserDto(user);
     }
 
-    public Page<UserDto> getFirstPromotionUser(int countRow, Pageable pageable) {
-
+    public Page<UserDto> getUser(Pageable pageable) {
+        int countRow = (pageable.getPageNumber() + 1) * pageable.getPageSize();
         List<UserDto> redisUsers = new ArrayList<>();
-        redisUsers.addAll(promotionRedisService.decrementRemainingImpressionsForPromotions(countRow));
-        List<Long> userIds = redisUsers.stream()
+        redisUsers.addAll(promotionRedisService.fetchPromotionsAndUpdateViews(countRow));
+
+        if (redisUsers.size() >= countRow) {
+            List<UserDto> result = redisUsers.subList(0, countRow);
+            return new PageImpl<>(result, pageable, result.size());
+        }
+
+        List<Long> redisUserIds = redisUsers.stream()
                 .map(userDto -> userDto.id())
                 .collect(Collectors.toList());
 
-        List<User> users = new ArrayList<>();
         int sizeRedisList = redisUsers.size();
-        if (sizeRedisList < countRow) {
-            int currencyUserFromPromotion = countRow - sizeRedisList;
-            users = userRepository.findFirstUserIdsNative(currencyUserFromPromotion, userIds);
-        }
+        int remainingCount = countRow - sizeRedisList;
 
-        List<UserDto> userDtos = users.stream()
+        Page<User> dbUsers = userRepository.findByIdNotIn(redisUserIds,
+                PageRequest.of(0, remainingCount, pageable.getSort()));
+        List<UserDto> dbUserDtos = dbUsers.stream()
                 .map(userMapper::toUserDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        Comparator<UserDto> comparator = createComparatorFromSort(pageable.getSort());
-        userDtos.sort(comparator);
+        Comparator<UserDto> comparator = promotionRedisService.createComparatorFromSort(pageable.getSort());
         redisUsers.sort(comparator);
-        redisUsers.addAll(userDtos);
-        return getPageFromList(redisUsers, pageable);
+
+        List<UserDto> allUsers = new ArrayList<>();
+        allUsers.addAll(redisUsers);
+        allUsers.addAll(dbUserDtos);
+        return getPageFromList(allUsers, pageable);
     }
 
     private Page<UserDto> getPageFromList(List<UserDto> list, Pageable pageable) {
@@ -122,25 +118,4 @@ public class UserServiceImpl implements UserService {
         return new PageImpl<>(pageContent, pageable, list.size());
     }
 
-    private Comparator<UserDto> createComparatorFromSort(Sort sort) {
-        return sort.stream()
-                .map(this::createComparatorForOrder)
-                .reduce(Comparator::thenComparing)
-                .orElse(Comparator.comparing(UserDto::id));
-    }
-
-    private Comparator<UserDto> createComparatorForOrder(Sort.Order order) {
-        Function<UserDto, String> fieldExtractor = FIELD_EXTRACTORS.get(order.getProperty());
-
-        Comparator<UserDto> comparator;
-
-        comparator = Comparator.comparing(fieldExtractor, nullsLastIgnoreCase());
-
-        return order.isAscending() ? comparator : comparator.reversed();
-    }
-
-
-    private static Comparator<String> nullsLastIgnoreCase() {
-        return Comparator.nullsLast(String.CASE_INSENSITIVE_ORDER);
-    }
 }
